--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Test - HTML</title>
-  </head>
+  <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+  <header>
+     <h1>Yoursite.com</h1>
+  </header>
   <body>
-    <h2>HELLO WORLD</h2>
+    <div id="menu">
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="aboutUs.html">About Us</a></li>
+    <li><a href="ourapproach.html">Our Approach</a></li>
+    <li><a href="ourwork.html">Our Work</a></li>
+    <li><a href="clients.html">Clients</a></li>
+    <li><a href="resources.html">Resources</a></li>
+  </ul></div>
+  <div class="container">
+		<h2>container1</h2>
+    <small class="top-corner">absolute and fixed positioning</small>
+		<div class="box a">a</div>
+		<div class="box b">b</div>
+		<div class="box c">c</div>
+		<div class="box d">d</div>
+		<div class="box e">e</div>
+		<div class="box f">f</div>
+	</div>
+	
+
   </body>
 </html>
