Initial commit for start of prototype

--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Test - HTML</title>
+    <title>Prototype</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
   </head>
   <body>
-    <h2>HELLO WORLD</h2>
+
+    <header>
+      <div class="logo-container">
+        <span class="logo">YourSite.com</span>
+        <span class="company-subtitle">Website Prototype</span>
+      </div>
+      <a href="">Contact Us</a>
+      <a href="">Log In</a>
+      <input type="search"/>
+      <input type="button" value="Search"/>
+    </header>
+
+    <nav>
+      <ul>
+        <li>
+          <a href="">About Us</a>
+        </li>
+        <li>
+          <a href="">Our Approach</a>
+        </li>
+        <li>
+          <a href="">Our Work</a>
+        </li>
+        <li>
+          <a href="">Clients</a>
+        </li>
+        <li>
+          <a href="">Resources</a>
+        </li>
+      </ul>
+    </nav>
+
+    <section class="hero">
+
+    </section>
+
   </body>
 </html>
