Added hero and worked on styling for header

--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
   </head>
   <body>
 
+<!-- HEADER -->
     <header>
       <div class="logo-container">
         <span class="logo">YourSite.com</span>
         <span class="company-subtitle">Website Prototype</span>
       </div>
-      <a href="">Contact Us</a>
-      <a href="">Log In</a>
-      <input type="search"/>
-      <input type="button" value="Search"/>
+      <ul>
+        <li>
+          <a href="">Contact Us</a>
+        </li>
+        <li>
+          <a href="">Log In</a>
+        </li>
+      </ul>
+      <div>
+        <input type="search"/>
+        <input type="button" value="Search"/>
+      </div>
     </header>
 
+<!-- NAVIGATION -->
     <nav>
       <ul>
         <li>
@@ -38,8 +48,16 @@
       </ul>
     </nav>
 
+<!-- SLIDESHOW SECTION -->
     <section class="hero">
-
+      <img src="https://images.unsplash.com/photo-1463432786691-8ec0615f2dfe?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
+      <article>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h3>
+        <p>
+          Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
+        </p>
+        <span><a class="blue-anchor" href="">Read More</a></span>
+      </article>
     </section>
 
   </body>
