--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 <!-- HEADER -->
     <header>
       <div class="logo-container">
-        <span class="logo">YourSite.com</span>
+        <span class="logo">MySite.com</span>
         <span class="company-subtitle">Website Prototype</span>
       </div>
-      <ul>
-        <li>
-          <a href="">Contact Us</a>
-        </li>
-        <li>
-          <a href="">Log In</a>
-        </li>
-      </ul>
       <div>
-        <input type="search"/>
-        <input type="button" value="Search"/>
+        <ul>
+          <li>
+            <a href="">Contact Us</a>
+          </li>
+          <li>
+            <a href="">Log In</a>
+          </li>
+        </ul>
+        <div>
+          <input type="search"/>
+          <input type="button" value="Search"/>
+        </div>
       </div>
+
     </header>
 
 <!-- NAVIGATION -->
@@ -49,7 +52,7 @@
     </nav>
 
 <!-- SLIDESHOW SECTION -->
-    <section class="hero">
+    <section class="hero section">
       <img src="https://images.unsplash.com/photo-1463432786691-8ec0615f2dfe?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
       <article>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h3>
@@ -57,6 +60,13 @@
           Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
         </p>
         <span><a class="blue-anchor" href="">Read More</a></span>
+      </article>
+    </section>
+
+<!-- ARTICLE SECTION -->
+    <section class="section">
+      <article class="article">
+        <span class="newsletter-heading">Newsletter |</span><span class="date"> January, 2017</span>
       </article>
     </section>
 
