Committing additional changes to assignment 1.

--- a/assignment1.html
+++ b/assignment1.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment1 - HTML</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
   <body>
-    <div class="container container1">
-    <h3>Mongo.com</h3>
-    <p>Website Prototype</p>
-    <div class="container container2">
-    <h3>Slideshow</h3>
-    <div class="container container3">
-    <h3>Newsletter</h3>
-    <div class="container container4">
-    <h3>Blog1</h3>
-    <div class="container container5">
+    <div class="header">
+    <img id="logo" src="logo.png" alt="logo"/>
+
+    <ul id="headerlinks1"/>
+    <li><a href="#">Contact Us</a></li>
+
+    <ul id="headerlinks2"/>
+    <li><a href="#">Login</a></li>
+    </ul>
+    <br>
+    <br>
+    <form>
+      <input type="text" placeholder="Search..." required>
+      <input type="button" id="searchbutton" value="Search">
+    </form>
   </body>
 </html>
