Commiting new html and updated css for assignment.  Changed assignment1 file back to index and confirmed css link.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Test - HTML</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>Assignment1 - HTML</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
   <body>
-    <h2>HELLO WORLD</h2>
+    <div class="header">
+    <img id="logo" src="logo.png" alt="logo">
+
+    <ul class="headerlinks">
+    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Login</a></li>
+    </ul>
+    <form>
+      <div class ="search">
+      <input type="text" placeholder="Search..." required>
+      <input type="button" id="searchbutton" value="Search" class="searchbutton">
+      </div>
+    </form>
+    </div>
+   <div class="navigation"></div>
+
+   <div class="overall">
+    <div class="slideshow"></div>
+    <div class="toprightarticle"></div>
+   </div>
+    <div class="largecontainer">
+      <div class="leftarticle"></div>
+      <div class="middlearticle"></div>
+        <div class="midtop"></div>
+        <div class="midbottom"></div>
+      <div class="signup">
+        <form></form>
+      </div>
+    </div>
+   <div class="footer"></div>
   </body>
 </html>
