Test commit, with updates

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
   <body>
+
     <div class="header">
     <img id="logo" src="logo.png" alt="logo">
 
@@ -20,9 +21,14 @@
       </div>
     </form>
     </div>
-   <div class="navigation"></div>
-
-   <div class="overall">
+   <ul class="navigation">
+      <li><a href="about.asp">About Us</a></li>
+      <li><a href="approach.asp">Our Approach</a></li>
+      <li><a href="work.asp">Our Work</a></li>
+      <li><a href="clients.asp">Our Clients</a></li>
+      <li><a href="resources.asp">Resources</a></li>
+   </ul>
+   <div class="bigbox">
     <div class="slideshow"></div>
     <div class="toprightarticle"></div>
    </div>
@@ -32,9 +38,13 @@
         <div class="midtop"></div>
         <div class="midbottom"></div>
       <div class="signup">
-        <form></form>
+        <form>
+          <div class="name"></div>
+          <div class="email"></div>
+        </form>
       </div>
-    </div>
-   <div class="footer"></div>
+     </div>
+    <div class="footer"></div>
+
   </body>
 </html>
