added css added html

--- a/index.html
+++ b/index.html
@@ -2,32 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Test - HTML</title>
+    <title>andreadoe</title>
   <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+
+  <!-- Header -->
   <header>
-     <h1>Yoursite.com</h1>
+    <div style="float:right;">
+    <li><a href="">contact us</a></li>
+    <li><a href="">login</a></li
+  </div>
+    <div>
+      <div style="float:right;">
+      <form action="/action_page.php">
+  <br>
+    <input type="search" id="mySearch" value="">
+  <br>
+  <input type="submit" value="search">
+</form>
+    </div>
   </header>
-  <body>
-    <div id="menu">
+
+
+  <!-- Navigation -->
+    <div class= "navigation">
     <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="aboutUs.html">About Us</a></li>
+    <li><a href="index.html">About Us</a></li>
     <li><a href="ourapproach.html">Our Approach</a></li>
     <li><a href="ourwork.html">Our Work</a></li>
     <li><a href="clients.html">Clients</a></li>
     <li><a href="resources.html">Resources</a></li>
   </ul></div>
-  <div class="container">
-		<h2>container1</h2>
-    <small class="top-corner">absolute and fixed positioning</small>
-		<div class="box a">a</div>
-		<div class="box b">b</div>
-		<div class="box c">c</div>
-		<div class="box d">d</div>
-		<div class="box e">e</div>
-		<div class="box f">f</div>
-	</div>
-	
+
+  <!-- ARTICLE-->
+  <body>
+    <div class= "section">
+      <img src="https://cdn.pixabay.com/photo/2017/02/09/15/10/sea-2052650_960_720.jpg"  width="700" height="400" alt="whale">
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
+        including versions of Lorem Ipsum.</p>
+</div>
+
+
+<div style="width: 1000px;">
+ <div style="float: left; width: 300px;">Left Stuff</div>
+ <div style="float: left; width: 300px;">Middle Stuff</div>
+ <div style="float: left; width: 300px;">Right Stuff</div>
+ <br style="clear: left;" />
+</div>
 
   </body>
-</html>
+    </html>
