Updates to articles section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           <input type="button" value="Search"/>
         </div>
       </div>
-
     </header>
 
 <!-- NAVIGATION -->
@@ -55,7 +54,7 @@
     <section class="hero section">
       <img src="https://images.unsplash.com/photo-1463432786691-8ec0615f2dfe?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
       <article>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h3>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h4>
         <p>
           Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
         </p>
@@ -64,10 +63,41 @@
     </section>
 
 <!-- ARTICLE SECTION -->
-    <section class="section">
-      <article class="article">
-        <span class="newsletter-heading">Newsletter |</span><span class="date"> January, 2017</span>
-      </article>
+    <section class="section three-column-section">
+      <div class="article-wrapper">
+        <article class="article">
+          <span class="newsletter-heading">Newsletter |</span><span class="date"> January, 2017</span>
+          <h4 class="article-title">Newsletter Title</h4>
+          <img class="newsletter-image" src="https://images.unsplash.com/photo-1429081172764-c0ee67ab9afd?dpr=2&auto=format&fit=crop&w=767&h=474&q=80&cs=tinysrgb&crop=" />
+          <p>
+            Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
+          </p>
+          <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
+        </article>
+      </div>
+      <div class="article-wrapper">
+        <article class="article article-top">
+          <span class="newsletter-heading">From the Blog</span>
+          <h4 class="article-title">Blog Post Title</h4>
+          <span class="date"> January 17, 2017 by <a class="blue-anchor" href="">John</a></span>
+          <p><img class="blog-image" src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
+            Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
+            <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
+          </p>
+        </article>
+        <article class="article">
+          <h4 class="article-title">Blog Post Title</h4>
+          <span class="date"> February 1, 2017 by <a class="blue-anchor" href="">John</a></span>
+          <p>
+            Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
+            <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
+          </p>
+        </article>
+      </div>
+      <div class="article wrapper sign-up">
+        <span class="newsletter-heading">Sign Up</span>
+      </div>
+
     </section>
 
   </body>
