--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Test - HTML</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <h2>HELLO WORLD</h2>
+    <div class="container">
+    </div>
+
+    <div class= "header">
+      <img src="smiley.gif">
+      <p>Website Protoype</p>
+     </div>
+
+    <div class= "Contact log">
+      <a href="#contactus">Contact Us</a>
+      <a href="#login">Log in</a>
+    </div>
+    <div class= "Search">
+    <input type="search" id="mySearch">
+    <button onclick="myFunction()">Search</button>
+      </div>
+
+    <div class="button-group button">
+      <button type="button" class="btn btn-primary">About Us</button>
+      <button type="button" class="btn btn-primary">Our Approach</button>
+      <button type="button" class="btn btn-primary">Our Work</button>
+      <button type="button" class="btn btn-primary">Clients</button>
+      <button type="button" class="btn btn-primary">Resources</button>
+    </div>
+
+    <img src="https://media-cdn.tripadvisor.com/media/photo-s/01/90/78/c5/sunset-over-dinner-nice.jpg" alt="Smiley face" align="middle">
+
   </body>
 </html>
