Updates to sign-up section and added footer.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 
 <!-- ARTICLE SECTION -->
     <section class="section three-column-section">
+
+      <!-- NEWSLETTER -->
       <div class="article-wrapper">
         <article class="article">
           <span class="newsletter-heading">Newsletter |</span><span class="date"> January, 2017</span>
@@ -75,12 +77,17 @@
           <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
         </article>
       </div>
+
+      <!-- BLOG POSTS -->
       <div class="article-wrapper">
         <article class="article article-top">
           <span class="newsletter-heading">From the Blog</span>
           <h4 class="article-title">Blog Post Title</h4>
           <span class="date"> January 17, 2017 by <a class="blue-anchor" href="">John</a></span>
-          <p><img class="blog-image" src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
+          <figure>
+            <img class="blog-image" src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
+          </figure>
+          <p>
             Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
             <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
           </p>
@@ -88,17 +95,34 @@
         <article class="article">
           <h4 class="article-title">Blog Post Title</h4>
           <span class="date"> February 1, 2017 by <a class="blue-anchor" href="">John</a></span>
+          <figure>
+            <img class="blog-image" src="https://images.unsplash.com/photo-1474464123933-9553d590bc7c?dpr=2&auto=format&fit=crop&w=767&h=510&q=80&cs=tinysrgb&crop=" />
+          </figure>
           <p>
             Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
             <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
           </p>
         </article>
       </div>
-      <div class="article wrapper sign-up">
-        <span class="newsletter-heading">Sign Up</span>
-      </div>
 
+      <!-- SIGN UP -->
+      <div class="article">
+        <span class="newsletter-heading">Sign Up</span>
+        <p class="sign-up-paragraph">
+          Nam iaculis magna non varius aliquet.
+        </p>
+        <input class="sign-up-input" type="name" value="Your Name"/><br>
+        <input class="sign-up-input" type="email" value="Your Email Address"/><br>
+        <input type="button" value="Submit"/>
+      </div>
+    <!-- END OF ARTICLE SECTION -->
     </section>
 
+    <!-- FOOTER -->
+    <footer>
+      <small>&copy; 2017 My Company. All rights reserved. | Denver, CO | 800-314-1212</small><br>
+      <small>Nam ut turpis in nibh ornare bibendum ut non nulla.</small><br>
+      <small>Aliquam erat volutpat.</small>
+    </footer>
   </body>
 </html>
