End of class commit and push for assignment 1.  Cleaned up formatting and working on building css for page formatting.

--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Assignment1 - HTML</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
+<body>
 
     <div class="header">
-    <img id="logo" src="logo.png" alt="logo">
+        <img id="logo" src="logo.png" alt="logo">
 
-    <ul class="headerlinks">
-    <li><a href="#">Contact Us</a></li>
-    <li><a href="#">Login</a></li>
-    </ul>
-    <form>
-      <div class ="search">
-      <input type="text" placeholder="Search..." required>
-      <input type="button" id="searchbutton" value="Search" class="searchbutton">
-      </div>
-    </form>
+        <ul class="headerlinks">
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Login</a></li>
+        </ul>
+        <form>
+            <div class="search">
+                <input type="text" placeholder="Search..." required>
+                <input type="button" id="searchbutton" value="Search" class="searchbutton">
+            </div>
+        </form>
     </div>
-   <ul class="navigation">
-      <li><a href="about.asp">About Us</a></li>
-      <li><a href="approach.asp">Our Approach</a></li>
-      <li><a href="work.asp">Our Work</a></li>
-      <li><a href="clients.asp">Our Clients</a></li>
-      <li><a href="resources.asp">Resources</a></li>
-   </ul>
-   <div class="bigbox">
-    <div class="slideshow"></div>
-    <div class="toprightarticle"></div>
-   </div>
+    <ul class="navigation">
+        <li><a href="about.asp">About Us</a></li>
+        <li><a href="approach.asp">Our Approach</a></li>
+        <li><a href="work.asp">Our Work</a></li>
+        <li><a href="clients.asp">Our Clients</a></li>
+        <li><a href="resources.asp">Resources</a></li>
+    </ul>
+    <div class="outerbox">
+        <div class="slideshow"></div>
+        <div class="toprightarticle"></div>
+    </div>
     <div class="largecontainer">
-      <div class="leftarticle"></div>
-      <div class="middlearticle"></div>
+        <div class="leftarticle"></div>
+        <div class="middlearticle"></div>
         <div class="midtop"></div>
         <div class="midbottom"></div>
-      <div class="signup">
-        <form>
-          <div class="name"></div>
-          <div class="email"></div>
-        </form>
-      </div>
-     </div>
+        <div class="signup">
+            <form>
+                <div class="name"></div>
+                <div class="email"></div>
+            </form>
+        </div>
+    </div>
     <div class="footer"></div>
 
-  </body>
+</body>
+
 </html>
