--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Assignment1 - HTML</title>
+    <title>Shaun Olson - HTML</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
@@ -32,6 +32,7 @@
     </ul>
     <div class="outerbox">
         <div class="slideshow"></div>
+
         <div class="toprightarticle"></div>
     </div>
     <div class="largecontainer">
@@ -46,7 +47,18 @@
             </form>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+      <ul class="navigation">
+          <li><a>©2017 Mongo Inc.</a></li>
+          <li><a>|</a></li>
+          <li><a>Denver, Colorado</a></li>
+          <li><a>|</a></li>
+          <li><a>303-333-3456</a></li>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Maecenas scelerisque pulvinar urna, eget auctor erat eleifend
+            non. Etiam eget nulla.</p>
+      </ul>
+    </div>
 
 </body>
 
