--- a/index.html
+++ b/index.html
@@ -34,44 +34,63 @@
       <div class="slideshow">
         <img src="images/map.jpg">
       </div>
-      <div class="gibberish">
-        <h3>This is all that gibberish to the right of the slideshow<br></h3>
-        This is all that gibberish to the right of the slideshow<br><br>
+      <div class="slideshowtext">
+        <h3>Why use Lorem Ipsum Generator?<br></h3>
+        When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!<br><br>
         <a href="http://www.google.com/">Read more</a>
       </div>
     </div>
+    <hr>
       <div class="mainbody">
         <ul>
   <li>
     <div class="newsletter">
       <b>Newsletter  |  January, 2011<br><br>
       Newsletter Title</b>
-      <img src="images/map.jpg"><br>
-      Here is a bunch of stuff<br>
+      <img src="images/dark-forest-road.jpg"><br>
+      <br>When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!<br><br>
       <a href="http://www.google.com/">Read more</a>
     </div>
   </li>
   <li>
     <div class="blog">
+      <h4>From the Blog</h4>
       <div class="blogtop">
-        btop
+        <b>Blog Post Title</b><br>
+        January 1, 2011 by <a href="http://www.google.com/">John</a><br><br>
+        <img src="images/thickness.jpg">
+        When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!
       </div>
       <div class="blogbottom">
-        bbottom
+        <b>Blog Post Title</b><br>
+        January 1, 2011 by <a href="http://www.google.com/">John</a><br><br>
+        <img src="images/Earth.png">
+        When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!
       </div>
     </div>
   </li>
   <li>
     <div class="signup">
-      signup
+      <h4>Signup</h4>
+      When you construct a web design you are most likely to not have any content in the beginning.
+      <div class="signup-form">
+        <div class="vertical-menu">
+        <form action="/action_page.php">
+          <input type="text" name="name" value="Your Name">
+          <input type="text" name="email" value="Your Email Address">
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+      </div>
     </div>
   </li>
 </ul>
-      </div>
-      <div class="footer">
-        &#0169 2012 your company | Denver, CO  |  800-gud-code<br>
-        latin nonsense<br>
-        more of the same
+<hr>
+<div class="footer">
+  &#0169 2012 My Company | Denver, CO  |  800-GUD-CODE<br>
+  When you construct a web design<br>
+  you are most likely to not have any content in the beginning.
+</div>
       </div>
 	 </div>
   </body>
