updates to flexbox

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <div>
         <ul>
           <li>
-            <a href="">Contact Us</a>
+            <a href="javascript:void(0);">Contact Us</a>
           </li>
           <li>
-            <a href="">Log In</a>
+            <a href="javascript:void(0);">Log In</a>
           </li>
         </ul>
         <div>
@@ -33,19 +33,19 @@
     <nav>
       <ul>
         <li>
-          <a href="">About Us</a>
+          <a href="javascript:void(0);">About Us</a>
         </li>
         <li>
-          <a href="">Our Approach</a>
+          <a href="javascript:void(0);">Our Approach</a>
         </li>
         <li>
-          <a href="">Our Work</a>
+          <a href="javascript:void(0);">Our Work</a>
         </li>
         <li>
-          <a href="">Clients</a>
+          <a href="javascript:void(0);">Clients</a>
         </li>
         <li>
-          <a href="">Resources</a>
+          <a href="javascript:void(0);">Resources</a>
         </li>
       </ul>
     </nav>
@@ -58,12 +58,12 @@
         <p>
           Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
         </p>
-        <span><a class="blue-anchor" href="">Read More</a></span>
+        <span><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
       </article>
     </section>
 
 <!-- ARTICLE SECTION -->
-    <section class="section three-column-section">
+    <section class="section wrap">
 
       <!-- NEWSLETTER -->
       <div class="article-wrapper">
@@ -74,7 +74,7 @@
           <p>
             Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
           </p>
-          <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
+          <span class="read-more"><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
         </article>
       </div>
 
@@ -83,37 +83,39 @@
         <article class="article article-top">
           <span class="newsletter-heading">From the Blog</span>
           <h4 class="article-title">Blog Post Title</h4>
-          <span class="date"> January 17, 2017 by <a class="blue-anchor" href="">John</a></span>
+          <span class="date"> January 17, 2017 by <a class="blue-anchor" href="javascript:void(0);">John</a></span>
           <figure>
             <img class="blog-image" src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" />
           </figure>
           <p>
             Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
-            <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
+            <span class="read-more"><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
           </p>
         </article>
         <article class="article">
           <h4 class="article-title">Blog Post Title</h4>
-          <span class="date"> February 1, 2017 by <a class="blue-anchor" href="">John</a></span>
+          <span class="date"> February 1, 2017 by <a class="blue-anchor" href="javascript:void(0);">John</a></span>
           <figure>
             <img class="blog-image" src="https://images.unsplash.com/photo-1474464123933-9553d590bc7c?dpr=2&auto=format&fit=crop&w=767&h=510&q=80&cs=tinysrgb&crop=" />
           </figure>
           <p>
             Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
-            <span class="read-more"><a class="blue-anchor" href="">Read More</a></span>
+            <span class="read-more"><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
           </p>
         </article>
       </div>
 
       <!-- SIGN UP -->
-      <div class="article">
-        <span class="newsletter-heading">Sign Up</span>
-        <p class="sign-up-paragraph">
-          Nam iaculis magna non varius aliquet.
-        </p>
-        <input class="sign-up-input" type="name" value="Your Name"/><br>
-        <input class="sign-up-input" type="email" value="Your Email Address"/><br>
-        <input type="button" value="Submit"/>
+      <div class="article-wrapper no-border">
+        <article class="article">
+          <span class="newsletter-heading">Sign Up</span>
+          <p class="sign-up-paragraph">
+            Nam iaculis magna non varius aliquet.
+          </p>
+          <input class="sign-up-input" type="name" value="Your Name"/><br>
+          <input class="sign-up-input" type="email" value="Your Email Address"/><br>
+          <input type="button" value="Submit"/>
+        </article>
       </div>
     <!-- END OF ARTICLE SECTION -->
     </section>
