--- a/index.html
+++ b/index.html
@@ -1,98 +1,127 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>TG-HTML-101</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Bootstrap 101 Template</title>
+
+  <!-- Bootstrap -->
+  <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
-  <div>
-    <header>
-      <div class="webLogo">
-        <img class="logoImg" src="images/webLogo.png">
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand narbar-left" href="javascript:void(0)">
+          <img class="img-repsonzive" height="50" alt="Brand" src="images/webLogo.png" </a>
+          <div class="navbar-right">
+          <div>
+          <a href="javascript:void(0)" class="navbar-link">Contact Us</a>
+          
+          <a href="javascript:void(0)" class="navbar-link">Log In</a>
+          </div>
+          <div>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Search</button>
+          </div>
+          </div>
       </div>
-      <div class="webSearch">
-        <p> <a href="javascript:void(0)">Contact Us</a> <a href="javascript:void(0)">Log In</a></p>
-        <p><input type="text" name="search"><input type="submit" value="Search"></p>
-      </div>
-      <div class="navbar">
-        <ul>
-          <li><a href=javascript:void(0)>About Us</a></li>
-          <li><a href=javascript:void(0)>Our Approach</a></li>
-          <li><a href=javascript:void(0)>Our Work</a></li>
-          <li><a href=javascript:void(0)>clients</a></li>
-          <li><a href=javascript:void(0)>Resources</a></li>
-        </ul>
-      </div>
-    </header>
-
-    <div class="slides">
-      <section id="slideShow">
-        <img class="mySlides" src="images/1.png">
-        <img class="mySlides" src="images/2.png">
-      </section>
-
-      <section id="slideShow_description">
-        <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit, sed diam nonummy nibh euismod tincident.</h1>
-
-        <p>Lorem ipsum dolor sit amet, consetetuer adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere
-          magna aliquam erat</p>
-
-        <a href="javascript:void(0)">Read More</a>
-      </section>
     </div>
-
-    <div class="threeColumns">
-      <section id="newsLetter">
-        <h1>Newsletter Title</h1>
-        <a href="=" javaascript:void(0)><img class="newsLetter_Img" src="images/newsletter.jpg"></a>
-        <p>Lorem ipsum dolor sit amet, consetetuer adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere
-          magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
-      </section>
-
-      <section id="blog">
-        <h1>Blog Post Title</h1>
-        <p>Januar 1, 2011 by <a href="javascript:void(0)">Huy</a></p>
-        <p>
-          <a href="=" javaascript:void(0)><img class="newsLetter_Img" src="images/newsletter.jpg" align="left"></a>Lorem ipsum dolor sit amet, consetetuer
-          adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
-
-      </section>
-      <section id="signUp">
-        <h1>Sign Up</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer.</p>
-        <p><input type="text" name="name" placeholder="Your Name"></p>
-        <p></p><input type="text" name="email" placeholder="Your Email Address"></p>
-        <p></p><input type="submit" value="Submit"></p>
-      </section>
+  </nav>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li><a href=javascript:void(0)>About Us</a></li>
+        <li><a href=javascript:void(0)>Our Approach</a></li>
+        <li><a href=javascript:void(0)>Our Work</a></li>
+        <li><a href=javascript:void(0)>clients</a></li>
+        <li><a href=javascript:void(0)>Resources</a></li>
+      </ul>
     </div>
-
-    <footer>
-      <p>@2011 Your Company | New York, NY | 800-123-4567</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer.</p>
-    </footer>
   </div>
+
+  <div class="row slideshow-container">
+    <div class="col-sm-6">
+      <div id="myCarousel" class="carousel slides-container" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="slideshow">
+          <div class="item active">
+            <img src="images/1.png" alt="Icon">
+          </div>
+
+          <div class="item">
+            <img src="images/2.png" alt="Icon">
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+    <div class="col-sm-6">
+      <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit, sed diam nonummy nibh euismod tincident.</h1>
+
+      <p>Lorem ipsum dolor sit amet, consetetuer adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere
+        magna aliquam erat</p>
+    </div>
+  </div>
+
+  <div class="row three-columns-container">
+    <div class="col-sm-4 newsletter-container">
+      <h1>Newsletter Title</h1>
+      <a href="=" javaascript:void(0)><img class="newsLetter_Img" src="images/newsletter.jpg"></a>
+      <p>Lorem ipsum dolor sit amet, consetetuer adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere
+        magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
+    </div>
+    <div class="col-sm-4 blog-container">
+      <h1>Blog Post Title</h1>
+      <p>Januar 1, 2011 by <a href="javascript:void(0)">Huy</a></p>
+      <p>
+        <a href="=" javaascript:void(0)><img class="newsLetter_Img" src="images/newsletter.jpg" align="left"></a>Lorem ipsum dolor sit amet, consetetuer
+        adipiscing elit., sed diam noummy nibh euismod tincident ut loareet dolere magna aliquam erat... <a href="javascript:void(0)">Read More</a></p>
+    </div>
+    <div class="col-sm-4 sign-up-container">
+      <h1>Sign Up</h1>
+      <p>Lorem ipsum dolor sit amet, consectetuer.</p>
+      <p><input type="text" name="name" placeholder="Your Name"></p>
+      <p></p><input type="text" name="email" placeholder="Your Email Address"></p>
+      <p></p><input type="submit" value="Submit"></p>
+    </div>
+  </div>
+
+  <footer>
+    <p>@2011 Your Company | New York, NY | 800-123-4567</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer.</p>
+  </footer>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </body>
-
-<script>
-  var myIndex = 0;
-  carousel();
-
-  function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";
-    }
-    myIndex++;
-    if (myIndex > x.length) {
-      myIndex = 1
-    } x[myIndex - 1].style.display = "block";
-    setTimeout(carousel, 2000);//every 2 seconds
-  }
-
-</script>
 
 </html>
