Added images and fixed placement for navigation.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <div class="header">
         <img id="logo" src="logo.png" alt="logo">
-
         <ul class="headerlinks">
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Login</a></li>
@@ -31,24 +30,36 @@
         <li><a href="resources.asp">Resources</a></li>
     </ul>
     <div class="outerbox">
-        <div class="slideshow"></div>
-
+        <div class="slideshow">
+          <img id="panorama" src="panorama.png" alt="panorama">
+        </div>
         <div class="toprightarticle"></div>
     </div>
     <div class="largecontainer">
-        <div class="leftarticle"></div>
+        <div class="leftarticle">
+          <h2>Newsletter</h2>
+        </div>
         <div class="middlearticle"></div>
         <div class="midtop"></div>
         <div class="midbottom"></div>
-        <div class="signup">
+        <div class="signupbox">
+          <h2>Sign Up</h2>
+          <p>In vel blandit felis, nec sodales est. In hendrerit ligula.</p>
             <form>
-                <div class="name"></div>
-                <div class="email"></div>
+                <div class="name">
+                  <input type="text" placeholder="Name" required>
+                </div>
+                <div class="email">
+                  <input type="text" placeholder="email " required>
+                </div>
+                <div class="submit">
+                  <input type="button" value="Submit">
+                </div>
             </form>
         </div>
     </div>
     <div class="footer">
-      <ul class="navigation">
+      <ul class="footertext">
           <li><a>©2017 Mongo Inc.</a></li>
           <li><a>|</a></li>
           <li><a>Denver, Colorado</a></li>
