--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           </div>
       </div>
       <div class="btn-group">
-         <button class="button"><a href="http://www.google.com">About Us</a></button>
-         <button class="button">Our Approach</button>
-         <button class="button">Our Work</button>
-         <button class="button">Clients</button>
-         <button class="button">Resources</button>
+         <button class="button"><a href="https://www.w3schools.com">About Us</a></button>
+         <button class="button"><a href="https://www.w3schools.com">Our Approach</a></button>
+         <button class="button"><a href="https://www.w3schools.com">Our Work</a></button>
+         <button class="button"><a href="https://www.w3schools.com">Clients</a></button>
+         <button class="button"><a href="https://www.w3schools.com">Resources</a></button>
       </div>
       <div class="topsection">
       <div class="slideshow">
@@ -36,8 +36,12 @@
       </div>
       <div class="slideshowtext">
         <h3>Why use Lorem Ipsum Generator?<br></h3>
-        When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!<br><br>
-        <a href="http://www.google.com/">Read more</a>
+        When you construct a web design you are most likely to not have any content in the beginning.
+        So for the first time you show your web design for your client it can be useful to have some
+        text to show so your client can imagine how it will look like when it is finished. That is
+        why you should use our Lorem Ipsum Generator to generate simple text to fill your projects
+        with. We hope you enjoy it and find it useful!<br><br>
+        <a href="https://www.w3schools.com">Read more</a>
       </div>
     </div>
     <hr>
@@ -48,8 +52,12 @@
       <b>Newsletter  |  January, 2011<br><br>
       Newsletter Title</b>
       <img src="images/dark-forest-road.jpg"><br>
-      <br>When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!<br><br>
-      <a href="http://www.google.com/">Read more</a>
+      <br>When you construct a web design you are most likely to not have any content in the beginning.
+      So for the first time you show your web design for your client it can be useful to have some
+      text to show so your client can imagine how it will look like when it is finished. That is
+      why you should use our Lorem Ipsum Generator to generate simple text to fill your projects
+      with. We hope you enjoy it and find it useful!<br><br>
+      <a href="https://www.w3schools.com">Read more</a>
     </div>
   </li>
   <li>
@@ -57,15 +65,25 @@
       <h4>From the Blog</h4>
       <div class="blogtop">
         <b>Blog Post Title</b><br>
-        January 1, 2011 by <a href="http://www.google.com/">John</a><br><br>
+        January 1, 2011 by <a href="https://www.w3schools.com">John</a><br><br>
         <img src="images/thickness.jpg">
-        When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!
+        When you construct a web design you are most likely to not have any content in the beginning.
+        So for the first time you show your web design for your client it can be useful to have some
+        text to show so your client can imagine how it will look like when it is finished. That is why
+        you should use our Lorem Ipsum Generator to generate simple text to fill your projects with.
+        We hope you enjoy it and find it useful!...
+        <a href="https://www.w3schools.com">Read more</a>
       </div>
       <div class="blogbottom">
         <b>Blog Post Title</b><br>
-        January 1, 2011 by <a href="http://www.google.com/">John</a><br><br>
+        January 1, 2011 by <a href="https://www.w3schools.com">John</a><br><br>
         <img src="images/Earth.png">
-        When you construct a web design you are most likely to not have any content in the beginning. So for the first time you show your web design for your client it can be useful to have some text to show so your client can imagine how it will look like when it is finished. That is why you should use our Lorem Ipsum Generator to generate simple text to fill your projects with. We hope you enjoy it and find it useful!
+        When you construct a web design you are most likely to not have any content in the beginning.
+        So for the first time you show your web design for your client it can be useful to have some
+        text to show so your client can imagine how it will look like when it is finished. That is why
+        you should use our Lorem Ipsum Generator to generate simple text to fill your projects with.
+        We hope you enjoy it and find it useful!...
+        <a href="https://www.w3schools.com">Read more</a>
       </div>
     </div>
   </li>
